Add units page and unit1 content layout

--- a/dashboard.html
+++ b/dashboard.html
@@ -13,12 +13,13 @@
     <p id="user-role">Detecting role...</p>
 
     <div class="btn-group" id="student-section">
-      <a href="#" class="button">📚 View Units</a>
+      <a href="units.html" class="button">📚 View Units</a>
       <a href="#" class="button-outline">📰 Biomedical Trends</a>
     </div>
 
     <div class="btn-group" id="trainer-section" style="display: none;">
       <a href="#" class="button">✍️ Upload Content</a>
+      <a href="units.html" class="button">📚 View Units</a>
       <a href="#" class="button-outline">📝 Edit Course Outline</a>
     </div>
 
