Add upload page for trainers

--- a/dashboard.html
+++ b/dashboard.html
@@ -18,7 +18,7 @@
     </div>
 
     <div class="btn-group" id="trainer-section" style="display: none;">
-      <a href="#" class="button">✍️ Upload Content</a>
+      <a href="upload.html" class="button">✍️ Upload Content</a>
       <a href="units.html" class="button">📚 View Units</a>
       <a href="#" class="button-outline">📝 Edit Course Outline</a>
     </div>
