Add global header and footer navigation to all pages

--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="container">
+    <header>
+        <h1>Microlearning Coach</h1>
+        <nav>
+        <a href="index.html">Home</a>
+        <a href="units.html">Units</a>
+        <a href="news.html">News</a>
+        <a href="testimonials.html">Testimonials</a>
+        <a href="contact.html">Contact</a>
+        </nav>
+    </header>
+    <div class="container">
     <h1>Welcome to Microlearning Coach</h1>
     <p>Empowering Medical Engineering Students with bite-sized lessons.</p>
     <div class="btn-group">
@@ -15,5 +25,8 @@
       <a href="signup.html" class="button-outline">Sign Up</a>
     </div>
   </div>
+  <footer>
+    &copy; 2025 Microlearning Coach. Built by Dorothy Ayiemba.
+  </footer>
 </body>
 </html>
