--- a/unit1.html
+++ b/unit1.html
@@ -8,7 +8,17 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="container">
+    <header>
+        <h1>Microlearning Coach</h1>
+        <nav>
+        <a href="index.html">Home</a>
+        <a href="units.html">Units</a>
+        <a href="news.html">News</a>
+        <a href="testimonials.html">Testimonials</a>
+        <a href="contact.html">Contact</a>
+        </nav>
+    </header>
+    <div class="container">
     <h1>Medical Electronics</h1>
 
     <div class="topic-card">
@@ -25,5 +35,8 @@
 
     <p><a href="units.html">⬅ Back to Units</a></p>
   </div>
+  <footer>
+    &copy; 2025 Microlearning Coach. Built by Dorothy Ayiemba.
+  </footer>
 </body>
 </html>
