--- a/units.html
+++ b/units.html
@@ -8,7 +8,17 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="container">
+    <header>
+        <h1>Microlearning Coach</h1>
+        <nav>
+        <a href="index.html">Home</a>
+        <a href="units.html">Units</a>
+        <a href="news.html">News</a>
+        <a href="testimonials.html">Testimonials</a>
+        <a href="contact.html">Contact</a>
+        </nav>
+    </header>
+    <div class="container">
     <h1>Available Course Units</h1>
     <ul class="unit-list">
       <li><a href="unit1.html">1. Medical Electronics</a></li>
@@ -25,5 +35,8 @@
 
     <p><a href="dashboard.html">⬅ Back to Dashboard</a></p>
   </div>
+  <footer>
+    &copy; 2025 Microlearning Coach. Built by Dorothy Ayiemba.
+  </footer>
 </body>
 </html>
