--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,17 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="container">
+    <header>
+        <h1>Microlearning Coach</h1>
+        <nav>
+        <a href="index.html">Home</a>
+        <a href="units.html">Units</a>
+        <a href="news.html">News</a>
+        <a href="testimonials.html">Testimonials</a>
+        <a href="contact.html">Contact</a>
+        </nav>
+    </header>
+    <div class="container">
     <h1>Contact Us</h1>
     <p>If you have any feedback, suggestions or support requests:</p>
     
@@ -25,5 +35,8 @@
 
     <p><a href="index.html">⬅ Back to Home</a></p>
   </div>
+  <footer>
+    &copy; 2025 Microlearning Coach. Built by Dorothy Ayiemba.
+  </footer>
 </body>
 </html>
