--- a/dashboard.html
+++ b/dashboard.html
@@ -8,7 +8,17 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="container">
+    <header>
+        <h1>Microlearning Coach</h1>
+        <nav>
+        <a href="index.html">Home</a>
+        <a href="units.html">Units</a>
+        <a href="news.html">News</a>
+        <a href="testimonials.html">Testimonials</a>
+        <a href="contact.html">Contact</a>
+        </nav>
+    </header>
+    <div class="container">
     <h1>Welcome to Your Dashboard</h1>
     <p id="user-role">Detecting role...</p>
 
@@ -27,5 +37,8 @@
   </div>
 
   <script src="script.js"></script>
+  <footer>
+    &copy; 2025 Microlearning Coach. Built by Dorothy Ayiemba.
+  </footer>
 </body>
 </html>
