--- a/login.html
+++ b/login.html
@@ -7,7 +7,17 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="auth-container">
+    <header>
+        <h1>Microlearning Coach</h1>
+        <nav>
+        <a href="index.html">Home</a>
+        <a href="units.html">Units</a>
+        <a href="news.html">News</a>
+        <a href="testimonials.html">Testimonials</a>
+        <a href="contact.html">Contact</a>
+        </nav>
+    </header>
+    <div class="auth-container">
     <h2>Login to Your Account</h2>
     <form id="login-form">
       <input type="email" id="login-email" placeholder="Email" required />
@@ -17,5 +27,8 @@
     <p>Don't have an account? <a href="signup.html">Sign up</a></p>
   </div>
   <script src="script.js"></script>
+  <footer>
+    &copy; 2025 Microlearning Coach. Built by Dorothy Ayiemba.
+  </footer>
 </body>
 </html>
