--- a/news.html
+++ b/news.html
@@ -7,7 +7,17 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="container">
+    <header>
+        <h1>Microlearning Coach</h1>
+        <nav>
+        <a href="index.html">Home</a>
+        <a href="units.html">Units</a>
+        <a href="news.html">News</a>
+        <a href="testimonials.html">Testimonials</a>
+        <a href="contact.html">Contact</a>
+        </nav>
+    </header>
+    <div class="container">
     <h1>Trends in Biomedical Engineering</h1>
     <ul>
       <li>🧠 AI-Powered Diagnostics and Imaging</li>
@@ -18,5 +28,8 @@
     </ul>
     <p><a href="index.html">⬅ Back to Home</a></p>
   </div>
+  <footer>
+    &copy; 2025 Microlearning Coach. Built by Dorothy Ayiemba.
+  </footer>
 </body>
 </html>
