--- a/signup.html
+++ b/signup.html
@@ -7,7 +7,17 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="auth-container">
+    <header>
+        <h1>Microlearning Coach</h1>
+        <nav>
+        <a href="index.html">Home</a>
+        <a href="units.html">Units</a>
+        <a href="news.html">News</a>
+        <a href="testimonials.html">Testimonials</a>
+        <a href="contact.html">Contact</a>
+        </nav>
+    </header>
+    <div class="auth-container">
     <h2>Create Your Account</h2>
     <form id="signup-form">
       <input type="text" id="name" placeholder="Full Name" required />
@@ -23,5 +33,8 @@
     <p>Already have an account? <a href="login.html">Login</a></p>
   </div>
   <script src="script.js"></script>
+  <footer>
+    &copy; 2025 Microlearning Coach. Built by Dorothy Ayiemba.
+  </footer>
 </body>
 </html>
