--- a/unit1.html
+++ b/unit1.html
@@ -8,35 +8,31 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <header>
-        <h1>Microlearning Coach</h1>
-        <nav>
-        <a href="index.html">Home</a>
-        <a href="units.html">Units</a>
-        <a href="news.html">News</a>
-        <a href="testimonials.html">Testimonials</a>
-        <a href="contact.html">Contact</a>
-        </nav>
-    </header>
-    <div class="container">
+  <!-- Navigation -->
+  <header>
+    <h1>Microlearning Coach</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="units.html">Units</a>
+      <a href="news.html">News</a>
+      <a href="testimonials.html">Testimonials</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+
+  <!-- Main Content -->
+  <div class="container">
     <h1>Medical Electronics</h1>
-
-    <div class="topic-card">
-      <h3>Topic: Introduction to Electronics</h3>
-      <iframe width="100%" height="215" src="https://www.youtube.com/embed/VIDEO_ID" frameborder="0" allowfullscreen></iframe>
-      <p><a href="#">Download Notes (PDF)</a></p>
-    </div>
-
-    <div class="topic-card">
-      <h3>Topic: Power Supply Systems</h3>
-      <iframe width="100%" height="215" src="https://www.youtube.com/embed/VIDEO_ID" frameborder="0" allowfullscreen></iframe>
-      <p><a href="#">Download Notes (PDF)</a></p>
-    </div>
-
+    <div id="topic-list">Loading topics...</div>
     <p><a href="units.html">⬅ Back to Units</a></p>
   </div>
+
+  <!-- Footer -->
   <footer>
     &copy; 2025 Microlearning Coach. Built by Dorothy Ayiemba.
   </footer>
+
+  <!-- JS Loader -->
+  <script src="script.js"></script>
 </body>
 </html>
