--- a/login.html
+++ b/login.html
@@ -15,6 +15,7 @@
         <a href="news.html">News</a>
         <a href="testimonials.html">Testimonials</a>
         <a href="contact.html">Contact</a>
+        <button id="theme-toggle" title="Toggle Theme">🌙</button>
         </nav>
     </header>
     <div class="auth-container">
