--- a/unit1.html
+++ b/unit1.html
@@ -17,6 +17,7 @@
       <a href="news.html">News</a>
       <a href="testimonials.html">Testimonials</a>
       <a href="contact.html">Contact</a>
+      <button id="theme-toggle" title="Toggle Theme">🌙</button>
     </nav>
   </header>
 
