--- a/upload.html
+++ b/upload.html
@@ -16,6 +16,7 @@
         <a href="news.html">News</a>
         <a href="testimonials.html">Testimonials</a>
         <a href="contact.html">Contact</a>
+        <button id="theme-toggle" title="Toggle Theme">🌙</button>
         </nav>
     </header>
     <div class="container">
