uploads from google drive using localstorage

--- a/unit1.html
+++ b/unit1.html
@@ -27,6 +27,16 @@
     <div id="topic-list">Loading topics...</div>
     <p><a href="units.html">⬅ Back to Units</a></p>
   </div>
+  <div class="drive-upload-section trainer-only" style="display: none;">
+    <h4>Upload Lesson Material (Google Drive Link)</h4>
+    <input type="text" id="driveLinkInput" placeholder="Paste Google Drive Shareable Link" />
+    <button id="saveDriveLinkBtn">Save Link</button>
+    <p id="driveLinkStatus"></p>
+  </div>
+  <div class="drive-link-display">
+    <h4>Lesson Resources:</h4>
+    <ul id="driveLinksList"></ul>
+  </div>
 
   <!-- Footer -->
   <footer>
