progress bar percentage

--- a/unit1.html
+++ b/unit1.html
@@ -25,6 +25,19 @@
   <!-- Main Content -->
   <div class="container">
     <h1>Medical Electronics</h1>
+    <div class="progress-section">
+  <h3>📊 Progress Tracker</h3>
+  <p>Unit Progress: <span id="unit-progress-text">0%</span></p>
+  <div class="progress-bar">
+    <div class="progress-fill" id="unit-progress-bar" style="width: 0%;"></div>
+  </div>
+
+  <p>Overall Progress: <span id="overall-progress-text">0%</span></p>
+  <div class="progress-bar">
+    <div class="progress-fill" id="overall-progress-bar" style="width: 0%;"></div>
+  </div>
+  </div>
+
     <div id="topic-list">Loading topics...</div>
     <p><a href="units.html">⬅ Back to Units</a></p>
   </div>
