overall progress bar moved to dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -24,6 +24,15 @@
     <h1>Welcome to Your Dashboard</h1>
     <p id="user-role">Detecting role...</p>
 
+    <div class="progress-section">
+      <h3>📘 Overall Course Progress</h3>
+      <p>Total Progress: <span id="overall-progress-text">0%</span></p>
+      <div class="progress-bar">
+        <div class="progress-fill" id="overall-progress-bar" style="width: 0%;"></div>
+      </div>
+    </div>
+
+
     <div class="btn-group" id="student-section">
       <a href="units.html" class="button">📚 View Units</a>
       <a href="#" class="button-outline">📰 Biomedical Trends</a>
