updating progress details

--- a/dashboard.html
+++ b/dashboard.html
@@ -26,6 +26,7 @@
 
     <div class="progress-section">
       <h3>📘 Overall Course Progress</h3>
+      <p id="completion-status-msg"></p>
       <p>Total Progress: <span id="overall-progress-text">0%</span></p>
       <div class="progress-bar">
         <div class="progress-fill" id="overall-progress-bar" style="width: 0%;"></div>
