--- a/unit1.html
+++ b/unit1.html
@@ -43,7 +43,7 @@
     <p id="driveLinkStatus"></p>
   </div>
   <div class="drive-link-display">
-    <h4>Lesson Resources:</h4>
+    <h4>Additional Lesson Resources:</h4>
     <ul id="driveLinksList"></ul>
   </div>
 
