editted relevant units and included htmls

--- a/units.html
+++ b/units.html
@@ -23,16 +23,16 @@
     <div class="container">
     <h2>Available Course Units</h2>
     <ul class="unit-list">
-      <li><a href="unit1.html">1. Medical Electronics</a></li>
-      <li><a href="#">2. Biomedical Instrumentation</a></li>
-      <li><a href="#">3. Anesthesia, Respiration & ICU Equipment</a></li>
-      <li><a href="#">4. Radiology Equipment</a></li>
-      <li><a href="#">5. Physiotherapy Equipment</a></li>
-      <li><a href="#">6. Optical and ENT Devices</a></li>
-      <li><a href="#">7. Workshop Technology & Maintenance</a></li>
-      <li><a href="#">8. Clinical Engineering</a></li>
-      <li><a href="#">9. Medical Imaging Systems</a></li>
-      <li><a href="#">10. Safety and Regulations in Healthcare</a></li>
+      <li><a href="unit1.html">1. Medical Electronics III</a></li>
+      <li><a href="unit2.html">2. Engineering Technician Mathematics I</a></li>
+      <li><a href="unit3.html">3. Anaesthesia, Respiration & ICU Equipment</a></li>
+      <li><a href="unit4.html">4. Renal Equipment</a></li>
+      <li><a href="unit5.html">5. Physiotherapy Equipment</a></li>
+      <li><a href="unit6.html">6. Kitchen and Laundry Equipment</a></li>
+      <li><a href="unit7.html">7. Workshop Technology II</a></li>
+      <li><a href="unit8.html">8. Dental Technology</a></li>
+      <li><a href="unit9.html">9. Clinical Safety</a></li>
+      <li><a href="unit10.html">10. Environmental Literacy</a></li>
     </ul>
 
     <p><a href="dashboard.html">⬅ Back to Dashboard</a></p>
