testing hamburger menu on index html

--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
 </head>
 <body>
     <header>
-        <h1>Microlearning Coach</h1>
-        <nav>
-        <a href="index.html">Home</a>
-        <a href="units.html">Units</a>
-        <a href="news.html">News</a>
-        <a href="testimonials.html">Testimonials</a>
-        <a href="contact.html">Contact</a>
-        <button id="theme-toggle" title="Toggle Theme">🌙</button>
+        <nav class= "nav-bar">
+          <div class="logo">Microlearning Coach</div>
+          <button class="hamburger" id="hamburger">&#9776;</button>
+          <ul class="nav-links" id="nav-links">
+            <li><a href="index.html">Home</a></li>
+            <li></li><a href="units.html">Units</a></li>
+            <li></li><a href="news.html">News</a></li>
+            <li></li><a href="testimonials.html">Testimonials</a></li>
+            <li></li><a href="contact.html">Contact</a></li>
+          <li><button id="theme-toggle" title="Toggle Theme">🌙</button></li>
+          </ul>
         </nav>
     </header>
     <div class="container">
