--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <header>
+        <div class="logo">MLC</div>
+        <h1>Microlearning Coach</h1>
         <nav class= "nav-bar">
-          <div class="logo">Microlearning Coach</div>
           <button class="hamburger" id="hamburger">&#9776;</button>
           <ul class="nav-links" id="nav-links">
             <li><a href="index.html">Home</a></li>
