--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
           <button class="hamburger" id="hamburger">&#9776;</button>
           <ul class="nav-links" id="nav-links">
             <li><a href="index.html">Home</a></li>
-            <li></li><a href="units.html">Units</a></li>
-            <li></li><a href="news.html">News</a></li>
-            <li></li><a href="testimonials.html">Testimonials</a></li>
-            <li></li><a href="contact.html">Contact</a></li>
+            <li><a href="units.html">Units</a></li>
+            <li><a href="news.html">News</a></li>
+            <li><a href="testimonials.html">Testimonials</a></li>
+            <li><a href="contact.html">Contact</a></li>
           <li><button id="theme-toggle" title="Toggle Theme">🌙</button></li>
           </ul>
         </nav>
