--- a/index.html
+++ b/index.html
@@ -9,17 +9,15 @@
 <body>
     <header>
         <h1>Microlearning Coach</h1>
-        <nav class= "nav-bar">
           <button class="hamburger" id="hamburger">&#9776;</button>
-          <ul class="nav-links" id="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="units.html">Units</a></li>
-            <li><a href="news.html">News</a></li>
-            <li><a href="testimonials.html">Testimonials</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><button id="theme-toggle" title="Toggle Theme">🌙</button></li>
-          </ul>
-        </nav>
+          <nav class="nav-links" id="nav-links">
+            <a href="index.html">Home</a>
+            <a href="units.html">Units</a>
+            <a href="news.html">News</a>
+            <a href="testimonials.html">Testimonials</a>
+            <a href="contact.html">Contact</a>
+            <button id="theme-toggle" title="Toggle Theme">🌙</button>
+          </nav>
     </header>
     <div class="container">
     <h1>Welcome to Microlearning Coach</h1>
