--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h1>Welcome to Microlearning Coach</h1>
     <p>Empowering Medical Engineering Students with bite-sized lessons.</p>
     <div class="btn-group">
-      <a href="login.html" class="button">Login</a>
+      <a href="login.html" class="button">Login</a></br>
       <a href="signup.html" class="button-outline">Sign Up</a>
     </div>
   </div>
