script loader index

--- a/index.html
+++ b/index.html
@@ -30,5 +30,7 @@
   <footer>
     &copy; 2025 Microlearning Coach. Built by Dorothy Ayiemba.
   </footer>
+  <!-- JS Loader -->
+  <script src="script.js"></script
 </body>
 </html>
