updated all htmls with js loading and hamrburger menu

--- a/signup.html
+++ b/signup.html
@@ -9,13 +9,14 @@
 <body>
     <header>
         <h1>Microlearning Coach</h1>
-        <nav>
-        <a href="index.html">Home</a>
-        <a href="units.html">Units</a>
-        <a href="news.html">News</a>
-        <a href="testimonials.html">Testimonials</a>
-        <a href="contact.html">Contact</a>
-        <button id="theme-toggle" title="Toggle Theme">🌙</button>
+        <button class="hamburger" id="hamburger">&#9776;</button>
+        <nav class="nav-links" id="nav-links">
+          <a href="index.html">Home</a>
+          <a href="units.html">Units</a>
+          <a href="news.html">News</a>
+          <a href="testimonials.html">Testimonials</a>
+          <a href="contact.html">Contact</a>
+          <button id="theme-toggle" title="Toggle Theme">🌙</button>
         </nav>
     </header>
     <div class="auth-container">
@@ -33,9 +34,11 @@
     </form>
     <p>Already have an account? <a href="login.html">Login</a></p>
   </div>
-  <script src="script.js"></script>
+  
   <footer>
     &copy; 2025 Microlearning Coach. Built by Dorothy Ayiemba.
   </footer>
+  
+  <script src="script.js"></script>
 </body>
 </html>
