--- a/dashboard.html
+++ b/dashboard.html
@@ -10,14 +10,15 @@
 <body>
     <header>
         <h1>Microlearning Coach</h1>
-        <nav>
-        <a href="index.html">Home</a>
-        <a href="units.html">Units</a>
-        <a href="news.html">News</a>
-        <a href="testimonials.html">Testimonials</a>
-        <a href="contact.html">Contact</a>
-        <button id="logoutBtn" style="margin-left: 15px;">Logout</button>
-        <button id="theme-toggle" title="Toggle Theme">🌙</button>
+        <button class="hamburger" id="hamburger">&#9776;</button>
+        <nav class="nav-links" id="nav-links">
+          <a href="index.html">Home</a>
+          <a href="units.html">Units</a>
+          <a href="news.html">News</a>
+          <a href="testimonials.html">Testimonials</a>
+          <a href="contact.html">Contact</a>
+          <button id="logoutBtn" style="margin-left: 15px;">Logout</button>
+          <button id="theme-toggle" title="Toggle Theme">🌙</button>
         </nav>
     </header>
     <div class="container">
@@ -48,9 +49,10 @@
     <p><a href="index.html">⬅ Logout</a></p>
   </div>
 
-  <script src="script.js"></script>
   <footer>
     &copy; 2025 Microlearning Coach. Built by Dorothy Ayiemba.
   </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
