--- a/unit6.html
+++ b/unit6.html
@@ -11,7 +11,8 @@
   <!-- Navigation -->
   <header>
     <h1>Microlearning Coach</h1>
-    <nav>
+    <button class="hamburger" id="hamburger">&#9776;</button>
+    <nav class="nav-links" id="nav-links">
       <a href="index.html">Home</a>
       <a href="units.html">Units</a>
       <a href="news.html">News</a>
