--- a/news.html
+++ b/news.html
@@ -16,7 +16,7 @@
           <a href="news.html">News</a>
           <a href="testimonials.html">Testimonials</a>
           <a href="contact.html">Contact</a>
-          <button>Logout</button>
+          <button id="logoutBtn">Logout</button>
           <button title="Toggle Theme">🌙</button>
         </nav>
     </header>
