--- a/news.html
+++ b/news.html
@@ -16,8 +16,8 @@
           <a href="news.html">News</a>
           <a href="testimonials.html">Testimonials</a>
           <a href="contact.html">Contact</a>
-          <button id="logoutBtn">Logout</button>
-          <button title="Toggle Theme">🌙</button>
+          <button id="logoutBtn" style="margin-left: 15px;">Logout</button>
+          <button id="theme-toggle" title="Toggle Theme">🌙</button>
         </nav>
     </header>
     <div class="container">
