--- a/index.html
+++ b/index.html
@@ -7,32 +7,57 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <header>
-        <h1>Microlearning Coach</h1>
-          <button class="hamburger" id="hamburger">&#9776;</button>
-          <nav class="nav-links" id="nav-links">
-            <a href="index.html">Home</a>
-            <a href="units.html">Units</a>
-            <a href="news.html">News</a>
-            <a href="testimonials.html">Testimonials</a>
-            <a href="contact.html">Contact</a>
-            <button id="theme-toggle" title="Toggle Theme">🌙</button>
-          </nav>
-    </header>
-    <div class="container">
-    <h1>Welcome to Microlearning Coach</h1>
-    <p>Empowering Medical Engineering Students with bite-sized lessons.</p>
-    <div class="btn-group">
-      <a href="login.html" class="button">Login</a></br>
-      <a href="signup.html" class="button-outline">Sign Up</a>
-    </div>
+  <header>
+    <h1>Microlearning Coach</h1>
+    <button class="hamburger" id="hamburger">&#9776;</button>
+    <nav class="nav-links" id="nav-links">
+      <a href="index.html">Home</a>
+      <a href="units.html">Units</a>
+      <a href="news.html">News</a>
+      <a href="testimonials.html">Testimonials</a>
+      <a href="contact.html">Contact</a>
+      <button id="theme-toggle" title="Toggle Theme">🌙</button>
+    </nav>
+  </header>
+
+  <div class="layout">
+    <!-- Sidebar -->
+    <aside class="sidebar" id="sidebar">
+      <h3>Quick Links</h3>
+      <ul>
+        <li><a href="units.html">Explore Units</a></li>
+        <li><a href="news.html">Latest News</a></li>
+        <li><a href="contact.html">Contact Support</a></li>
+        <li><a href="faqs.html">FAQs</a></li>
+      </ul>
+    </aside>
+
+    <!-- Main Content -->
+    <main class="container">
+      <!-- Search Bar -->
+      <div class="search-section">
+        <input type="text" id="search-input" placeholder="Search lessons or topics..." />
+        <button id="search-button">Search</button>
+      </div>
+
+      <!-- Welcome Message -->
+      <div class="welcome-text">
+        <h1>Welcome to Microlearning Coach</h1>
+        <p>Empowering Medical Engineering Students with bite-sized lessons.</p>
+      </div>
+
+      <!-- Buttons -->
+      <div class="btn-group">
+        <a href="login.html" class="button">Login</a>
+        <a href="signup.html" class="button-outline">Sign Up</a>
+      </div>
+    </main>
   </div>
 
   <footer>
     &copy; 2025 Microlearning Coach. Built by Dorothy Ayiemba.
   </footer>
-  
-  <!-- JS Loader -->
-  <script src="script.js"></script
+
+  <script src="script.js"></script>
 </body>
 </html>
