--- a/contact.html
+++ b/contact.html
@@ -23,10 +23,7 @@
     <h1>Contact Us</h1>
     <p>If you have any feedback, suggestions or support requests:</p>
     
-    <ul>
-      <li>📧 Email: <a href="mailto:dorothyayiemba@gmail.com">dorothyayiemba@gmail.com</a></li>
-      <li>📞 Phone: +254 712 XXX XXX</li>
-    </ul>
+    <a href="mailto:dorothyayiemba@gmail.com">📧 Email: dorothyayiemba@gmail.com</a>
 
     <form id="contact-form">
       <input type="text" placeholder="Your Name" required />
