topics error loading

--- a/unit1.html
+++ b/unit1.html
@@ -25,7 +25,7 @@
 
   <!-- Main Content -->
   <div class="container">
-    <h1>Medical Electronics</h1>
+    <h1 id="unit-title">Medical Electronics</h1>
     <div class="progress-section">
   <h3>📊 Progress Tracker</h3>
   <p>Unit Progress: <span id="unit-progress-text">0%</span></p>
@@ -34,7 +34,7 @@
   </div>
   </div>
 
-    <div id="topic-list">Loading topics...</div>
+  <div id="topic-list">Loading topics...</div>
     <p><a href="units.html">⬅ Back to Units</a></p>
   </div>
   <div class="drive-upload-section trainer-only" style="display: none;">
