--- a/unit1.html
+++ b/unit1.html
@@ -25,7 +25,7 @@
 
   <!-- Main Content -->
   <div class="container">
-    <h1 id="unit-title">Medical Electronics</h1>
+    <h1 id="unit-title">Medical Electronics III</h1>
     <div class="progress-section">
   <h3>📊 Progress Tracker</h3>
   <p>Unit Progress: <span id="unit-progress-text">0%</span></p>
