--- a/units.html
+++ b/units.html
@@ -24,16 +24,16 @@
     <div class="container">
     <h2>Available Course Units</h2>
     <ul class="unit-list">
-      <li><a href="unit1.html?unit=Medical Electronics III">1. Medical Electronics III</a></li>
-      <li><a href="unit1.html?unit=Engineering Technician Mathematics I">2. Engineering Technician Mathematics I</a></li>
-      <li><a href="unit1.html?unit=Anaesthesia, Respiration & ICU Equipment">3. Anaesthesia, Respiration & ICU Equipment</a></li>
-      <li><a href="unit1.html?unit=Renal Equipment">4. Renal Equipment</a></li>
-      <li><a href="unit1.html?unit=Physiotherapy Equipment">5. Physiotherapy Equipment</a></li>
-      <li><a href="unit1.html?unit=Kitchen and Laundry Equipment">6. Kitchen and Laundry Equipment</a></li>
-      <li><a href="unit1.html?unit=Workshop Technology II">7. Workshop Technology II</a></li>
-      <li><a href="unit1.html?unit=Dental Technology">8. Dental Technology</a></li>
-      <li><a href="unit1.html?unit=Clinical Safety">9. Clinical Safety</a></li>
-      <li><a href="unit1.html?unit=Environmental Literacy">10. Environmental Literacy</a></li>
+      <li><a href="unit1.html?unit=Medical Electronics III">Medical Electronics III</a></li>
+      <li><a href="unit1.html?unit=Engineering Technician Mathematics I">Engineering Technician Mathematics I</a></li>
+      <li><a href="unit1.html?unit=Anaesthesia, Respiration & ICU Equipment">Anaesthesia, Respiration & ICU Equipment</a></li>
+      <li><a href="unit1.html?unit=Renal Equipment">Renal Equipment</a></li>
+      <li><a href="unit1.html?unit=Physiotherapy Equipment">Physiotherapy Equipment</a></li>
+      <li><a href="unit1.html?unit=Kitchen and Laundry Equipment">Kitchen and Laundry Equipment</a></li>
+      <li><a href="unit1.html?unit=Workshop Technology II">Workshop Technology II</a></li>
+      <li><a href="unit1.html?unit=Dental Technology">Dental Technology</a></li>
+      <li><a href="unit1.html?unit=Clinical Safety">Clinical Safety</a></li>
+      <li><a href="unit1.html?unit=Environmental Literacy">Environmental Literacy</a></li>
       <!-- <li><a href="unit1.html">1. Medical Electronics III</a></li>
       <li><a href="unit2.html">2. Engineering Technician Mathematics I</a></li>
       <li><a href="unit3.html">3. Anaesthesia, Respiration & ICU Equipment</a></li>
