--- a/unit1.html
+++ b/unit1.html
@@ -55,5 +55,11 @@
 
   <!-- JS Loader -->
   <script src="script.js"></script>
+  <script>
+    const query = new URLSearchParams(window.location.search);
+    if (!query.has("unit")) {
+      window.location.search = "?unit=Medical Electronics III"; 
+    }
+  </script>
 </body>
 </html>
