--- a/unit6.html
+++ b/unit6.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Kitchen & Laundry Equipment | Microlearning Coach</title>
+  <title>Kitchen and Laundry Equipment | Microlearning Coach</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -25,7 +25,7 @@
 
   <!-- Main Content -->
   <div class="container">
-    <h1>Kitchen & Laundry Equipment</h1>
+    <h1>Kitchen and Laundry Equipment</h1>
     <div class="progress-section">
   <h3>📊 Progress Tracker</h3>
   <p>Unit Progress: <span id="unit-progress-text">0%</span></p>
@@ -55,5 +55,11 @@
 
   <!-- JS Loader -->
   <script src="script.js"></script>
+  <script>
+    const query = new URLSearchParams(window.location.search);
+    if (!query.has("unit")) {
+      window.location.search = "?unit=Kitchen and Laundry Equipment"; 
+    }
+  </script>
 </body>
 </html>
