commented nav bars for login and signup pages

--- a/login.html
+++ b/login.html
@@ -10,14 +10,14 @@
     <header>
         <h1>Microlearning Coach</h1>
         <button class="hamburger" id="hamburger">&#9776;</button>
-        <nav class="nav-links" id="nav-links">
+        <!-- <nav class="nav-links" id="nav-links">
           <a href="index.html">Home</a>
           <a href="units.html">Units</a>
           <a href="news.html">News</a>
           <a href="testimonials.html">Testimonials</a>
           <a href="contact.html">Contact</a>
           <button id="theme-toggle" title="Toggle Theme">🌙</button>
-        </nav>
+        </nav> -->
     </header>
     <div class="auth-container">
     <h2>Login to Your Account</h2>
