--- a/signup.html
+++ b/signup.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Microlearning Coach</h1>
+        <a href="index.html"><h1>Microlearning Coach</h1></a>
         <button class="hamburger" id="hamburger">&#9776;</button>
         <!-- <nav class="nav-links" id="nav-links">
           <a href="index.html">Home</a>
