--- a/unit5.html
+++ b/unit5.html
@@ -10,7 +10,7 @@
 <body>
   <!-- Navigation -->
   <header>
-    <h1>Microlearning Coach</h1>
+    <a href="index.html"><h1>Microlearning Coach</h1></a>
     <button class="hamburger" id="hamburger">&#9776;</button>
     <nav class="nav-links" id="nav-links">
       <a href="index.html">Home</a>
