--- a/news.html
+++ b/news.html
@@ -30,11 +30,16 @@
       🧠 AI-Powered Diagnostics and Imaging
     </a>
     <p>AI-powered diagnostics and imaging are revolutionizing healthcare by improving speed, accuracy, and efficiency. AI is integrated into medical imaging (X-rays, CT scans, MRIs) to enable early, precise diagnoses.</p>
-      <strong>Accuracy & Detection:</strong> Identifies subtle abnormalities, especially for cancer and neurological conditions.
-      <strong>Efficiency:</strong> Automates image analysis and reduces radiologist workload.
-      <strong>Personalized Care:</strong> Uses patient data to tailor treatment and predict disease risk.
-      <strong>Modalities:</strong> X-rays (fractures), CT (tumors), MRI (brain analysis), Ultrasound (fetal and cardiac evaluation).
-      <strong>Challenges:</strong> Data privacy, bias, integration, and ethics.
+      <strong>Accuracy & Detection</strong> 
+      Identifies subtle abnormalities, especially for cancer and neurological conditions.
+      <strong>Efficiency</strong> 
+      Automates image analysis and reduces radiologist workload.
+      <strong>Personalized Care</strong> 
+      Uses patient data to tailor treatment and predict disease risk.
+      <strong>Modalities</strong> 
+      X-rays (fractures), CT (tumors), MRI (brain analysis), Ultrasound (fetal and cardiac evaluation).
+      <strong>Challenges</strong> 
+      Data privacy, bias, integration, and ethics.
   </div>
 
   <!-- Wearable Biosensors -->
